# openapi.yaml
@@ -17,69 +17,116 @@ openapi: 3.0.3
 
 info:
   version: 1.0.0
-  title: App template API
-  description: API to access and configure the app template
+  title: Kentix app API
+  description: API to access and configure the Kentix app
 externalDocs:
-  description: Find out more about the app template
+  description: Find out more about the Kentix app
   url: https://github.com/eliona-smart-building-assistant/app-template
 servers:
   - url: http://template/v1
 
 tags:
   - name: Configuration
-    description: Configuration stuff for app template
+    description: Configure access to Kentix devices
     externalDocs:
-      url: https://github.com/eliona-smart-building-assistant/app-template
+      url: https://github.com/eliona-smart-building-assistant/kentix-app
 
 paths:
-  /examples:
+  /configs:
     get:
       tags:
         - Configuration
-      summary: Get example configuration
-      description: Gets information about example.
-      operationId: getExamples
+      summary: Get all Kentix configurations
+      description: Gets information about all Kentix configurations
+      operationId: getConfigurations
       responses:
         200:
-          description: Successfully returned example configuration
+          description: Successfully returned configured Kentix configurations
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Example'
+                  $ref: '#/components/schemas/Configuration'
     post:
       tags:
         - Configuration
-      summary: Creates an example configuration
-      description: Creates an example configuration.
-      operationId: postExample
+      summary: Creates a Kentix configuration
+      description: Creates a Kentix configuration.
+      operationId: postConfiguration
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Example'
+              $ref: '#/components/schemas/Configuration'
       responses:
         201:
-          description: Successfully created an example configuration
+          description: Successfully created a new Kentix configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Configuration'
 
 components:
   schemas:
-
-    Example:
+    Configuration:
       type: object
-      description: Simply a example configuration
+      description: Each configuration defines access to one Kentix device.
       properties:
         id:
           type: integer
           format: int64
-          description: A id identifying the example configuration
+          description: Internal identifier for the configured device (created automatically). This identifier have to use always if you remove or update existing configured endpoints.
           readOnly: true
           nullable: true
-        config:
+        address:
           type: string
-          description: Configuration data for example
+          format: string
+          description: IP or hostname of the Kentix device
+          example: 10.10.10.101
+        apiKey:
+          type: string
+          description: Kentix API key
+        enable:
+          type: boolean
+          description: Flag to enable or disable the device
+          default: true
+          nullable: true
+        refreshInterval:
+          type: integer
+          description: Interval in seconds for collecting data from device
+          default: 60
+        requestTimeout:
+          type: integer
+          description: Timeout in seconds
+          default: 120
+          nullable: true
+        active:
+          type: boolean
+          readOnly: true
+          description: Set to `true` by the app when running and to `false` when app is stopped
+          nullable: true
+        projectIDs:
+          type: array
+          description: List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the Kentix app.
+          nullable: true
+          items:
+            type: string
+          example:
+            - 42
+            - 99
+
+    Sensor:
+      type: object
+      description: Each sensor represents one asset in Eliona.
+      properties:
+        projectID:
+          type: integer
+          description: The project ID this asset is assigned to.
+        assetID:
+          type: integer
+          description: ID of a parent asset which groups all device assets
+          nullable: true
+        serialNumber:
+          type: string
+          description: Serial number reported by the Kentix device
